tests/ui/traits/new-solver/equating-projection-cyclically.stderr
error[E0308]: mismatched types
  --> $DIR/equating-projection-cyclically.rs:25:9
   |
LL |     x = transform(x);
   |         ^^^^^^^^^^^^ cyclic type of infinite size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
